[gd_scene load_steps=10 format=3 uid="uid://xpiiugyb1hkr"]

[ext_resource type="Script" path="res://ui/computer.gd" id="1_02ee5"]
[ext_resource type="Theme" uid="uid://cljv3o1v8gskw" path="res://resources/theme.tres" id="1_vo5at"]
[ext_resource type="AudioStream" uid="uid://dxqpspb2vhsh4" path="res://audios/effects/cash_register.mp3" id="2_g2ree"]
[ext_resource type="Texture2D" uid="uid://dl1w47u5w5u7d" path="res://ui/wood.png" id="3_hhe87"]
[ext_resource type="Texture2D" uid="uid://qhp1tetpp7m" path="res://ui/logo_small.png" id="4_ryf8p"]
[ext_resource type="PackedScene" uid="uid://c8slmuoqkrv3x" path="res://ui/hotel_stars_hbox.tscn" id="5_tx76e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ymqfp"]
texture = ExtResource("3_hhe87")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cvxm3"]
content_margin_left = 16.0
content_margin_top = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6v7b0"]
bg_color = Color(0.164706, 0.113725, 0.0509804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.466667, 0.203922, 0.129412, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="computer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vo5at")
script = ExtResource("1_02ee5")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="money_label" type="Label" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 105.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0.937255, 0.67451, 0.156863, 1)
theme_override_colors/font_outline_color = Color(0.466667, 0.203922, 0.129412, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "Money: 100c"

[node name="panel" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ymqfp")
tab_alignment = 1

[node name="Overview" type="ScrollContainer" parent="panel"]
custom_minimum_size = Vector2(400, 256)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cvxm3")
follow_focus = true
horizontal_scroll_mode = 0

[node name="vbox" type="VBoxContainer" parent="panel/Overview"]
custom_minimum_size = Vector2(380, 256)
layout_mode = 2
alignment = 1

[node name="LogoSmall" type="TextureRect" parent="panel/Overview/vbox"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
texture = ExtResource("4_ryf8p")
expand_mode = 1
stretch_mode = 3

[node name="stars" parent="panel/Overview/vbox" instance=ExtResource("5_tx76e")]
layout_mode = 2

[node name="0" type="HSeparator" parent="panel/Overview/vbox"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_6v7b0")

[node name="Label" type="Label" parent="panel/Overview/vbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235294, 0.623529, 0.611765, 1)
theme_override_font_sizes/font_size = 16
text = "Cleanliness"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="panel/Overview/vbox"]
layout_mode = 2
text = "This is the property bar for your hotel. Rodents and garbage increase it. If it's too low, your hotel may close."
autowrap_mode = 3

[node name="bar" type="ProgressBar" parent="panel/Overview/vbox"]
layout_mode = 2
max_value = 1.0
value = 1.0

[node name="status" type="Label" parent="panel/Overview/vbox"]
layout_mode = 2
horizontal_alignment = 1

[node name="Shop" type="ScrollContainer" parent="panel"]
visible = false
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cvxm3")
follow_focus = true

[node name="vbox" type="VBoxContainer" parent="panel/Shop"]
custom_minimum_size = Vector2(380, 200)
layout_mode = 2

[node name="title" type="Label" parent="panel/Shop/vbox"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Shop"

[node name="description" type="Label" parent="panel/Shop/vbox"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
text = "Welcome to the shop.
Here you can buy items for the benefit of your customers.
You can also buy blueprints, which can be used to build rooms in your hotel."
autowrap_mode = 3

[node name="build_new_floor" type="Button" parent="panel/Shop/vbox"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Build new floor"

[node name="stars" type="Label" parent="panel/Shop/vbox/build_new_floor"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = -18.0
offset_right = 33.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.670588, 0.670588, 0.670588, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 10
text = "(Need 5 stars)"

[node name="price" type="Label" parent="panel/Shop/vbox/build_new_floor"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -8.5
offset_right = -8.0
offset_bottom = 8.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.937255, 0.67451, 0.156863, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "1000c"

[node name="0" type="HSeparator" parent="panel/Shop/vbox"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_6v7b0")

[node name="items" type="Label" parent="panel/Shop/vbox"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "ITEMS"

[node name="grid" type="GridContainer" parent="panel/Shop/vbox"]
layout_mode = 2
columns = 3

[node name="1" type="HSeparator" parent="panel/Shop/vbox"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_6v7b0")

[node name="blueprints" type="Label" parent="panel/Shop/vbox"]
layout_mode = 2
text = "BLUEPRINTS"

[node name="blueprints_grid" type="GridContainer" parent="panel/Shop/vbox"]
layout_mode = 2
columns = 3

[node name="2" type="HSeparator" parent="panel/Shop/vbox"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_6v7b0")

[node name="Customers" type="VBoxContainer" parent="panel"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="panel/Customers"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
follow_focus = true

[node name="vbox" type="VBoxContainer" parent="panel/Customers/scroll"]
custom_minimum_size = Vector2(380, 200)
layout_mode = 2
alignment = 1

[node name="title" type="Label" parent="panel/Customers/scroll/vbox"]
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Customers"

[node name="Label" type="Label" parent="panel/Customers/scroll/vbox"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "First floor"

[node name="GridContainer" type="GridContainer" parent="panel/Customers/scroll/vbox"]
layout_mode = 2
columns = 6

[node name="close" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -98.0
offset_top = 12.0
offset_right = -48.0
offset_bottom = 37.0
grow_horizontal = 0
text = "Close"

[node name="buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g2ree")
volume_db = -8.0
max_polyphony = 8
bus = &"Effects"

[connection signal="pressed" from="panel/Shop/vbox/build_new_floor" to="." method="_on_build_new_floor_pressed"]
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
